doc(index): Agregado nombre autor en titulo y footer, y añadido clase para estilo tarjeta en diagrama de arbol

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="header-content">
             <h1><span class="ml-gradient">Aprende Machine Learning</span></h1>
             <h2>Árboles de Decisión y Reinforcement Learning</h2>
-            <p class="autor">Autor: <b>[Tu Nombre]</b></p>
+            <p class="autor">Autor: <b>Diego Labrin</b></p>
             <p class="intro">Descubre de forma interactiva dos técnicas fundamentales de Machine Learning, sin necesidad de conocimientos previos.</p>
         </div>
     </header>
@@ -30,7 +30,7 @@
         <section id="arboles" class="tab-content active">
             <h2>Árboles de Decisión</h2>
             <div class="teoria" id="teoria-arboles"></div>
-            <div class="interactivo" id="diagrama-arbol"></div>
+            <div class="interactivo card-diagrama" id="diagrama-arbol"></div>
             <div class="ejemplo" id="ejemplo-arbol"></div>
         </section>
         <section id="rl" class="tab-content">
@@ -49,7 +49,7 @@
         </section>
     </main>
     <footer>
-        <p>© 2025 <b>[Tu Nombre]</b>. Proyecto educativo.</p>
+        <p>© 2025 <b>Diego Labrin</b>. Proyecto educativo para Sistemas Inteligentes - UFRO.</p>
     </footer>
 </body>
 </html>
