docs(index): Agregado de link externo del autor y mejoras en los demás links externos

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="inicio-hero-icon"><span>🧠</span></div>
                 <h1 class="modern-title">Machine Learning Interactivo</h1>
                 <p class="modern-desc">Descubre el fascinante mundo del Machine Learning a través de visualizaciones interactivas y ejemplos prácticos. Aprende sobre Árboles de Decisión y Reinforcement Learning de forma intuitiva.</p>
-                <div class="modern-author"><span>👤</span> Desarrollado por: <b>Diego Labrin</b></div>
+                <div class="modern-author"><span>👤</span> Desarrollado por: <b><a href="https://diegovpn.buzz" target="_blank" rel="noopener">Diego Labrin</a></b></div>
             </div>
             <div class="inicio-info modern-info">
                 <div class="modern-card">
@@ -205,24 +205,24 @@ document.addEventListener('DOMContentLoaded', function() {
                     <div class="referencias-col arboles">
                         <b>Árboles de Decisión:</b>
                         <ul>
-                            <li><a href="https://www.ibm.com/es-es/think/topics/decision-trees" target="_blank">"¿Qué es un árbol de decisión?" - IBM</a></li>
-                            <li><a href="https://www.unir.net/revista/ingenieria/arboles-de-decision/" target="_blank">Árboles de decisión: en qué consisten y aplicación en Big Data - UNIR</a></li>
-                            <li><a href="https://4geeks.com/es/interactive-coding-tutorial/tutorial-del-proyecto-arbol-de-decision" target="_blank">"Tutorial del Proyecto Árbol de Decisión</a></li>
-                            <li><a href="https://web.stanford.edu/~hastie/ElemStatLearn/" target="_blank">"The Elements of Statistical Learning" - Hastie, Tibshirani, Friedman</a></li>
-                            <li><a href="https://scikit-learn.org/stable/modules/tree.html" target="_blank">Scikit-learn Documentation - Decision Trees</a></li>
-                            <li><a href="https://www.kaggle.com/learn/intro-to-machine-learning" target="_blank">Kaggle Learn – Intro to Machine Learning</a></li>
+                            <li><a href="https://www.ibm.com/es-es/think/topics/decision-trees" target="_blank" rel="noopener">"¿Qué es un árbol de decisión?" - IBM</a></li>
+                            <li><a href="https://www.unir.net/revista/ingenieria/arboles-de-decision/" target="_blank" rel="noopener">Árboles de decisión: en qué consisten y aplicación en Big Data - UNIR</a></li>
+                            <li><a href="https://4geeks.com/es/interactive-coding-tutorial/tutorial-del-proyecto-arbol-de-decision" target="_blank" rel="noopener">"Tutorial del Proyecto Árbol de Decisión</a></li>
+                            <li><a href="https://web.stanford.edu/~hastie/ElemStatLearn/" target="_blank" rel="noopener">"The Elements of Statistical Learning" - Hastie, Tibshirani, Friedman</a></li>
+                            <li><a href="https://scikit-learn.org/stable/modules/tree.html" target="_blank" rel="noopener">Scikit-learn Documentation - Decision Trees</a></li>
+                            <li><a href="https://www.kaggle.com/learn/intro-to-machine-learning" target="_blank" rel="noopener">Kaggle Learn – Intro to Machine Learning</a></li>
                         </ul>
                     </div>
                     <div class="referencias-col rl">
                         <b>Aprendizaje por Refuerzo:</b>
                         <ul>
-                            <li><a href="https://es.wikipedia.org/wiki/Aprendizaje_por_refuerzo" target="_blank">Aprendizaje por refuerzo - WikiPedia</a></li>
-                            <li><a href="https://www.ibm.com/es-es/think/topics/reinforcement-learning" target="_blank">"¿Qué es el aprendizaje de refuerzo?" - IBM</a></li>
-                            <li><a href="https://deepreinforcementlearningbook.org/" target="_blank">"Deep Reinforcement Learning" – Pieter Abbeel (UC Berkeley)</a></li>
-                            <li><a href="https://medium.com/aprendizaje-por-refuerzo-introducci%C3%B3n-al-mundo-del/aprendizaje-por-refuerzo-introducci%C3%B3n-al-mundo-del-rl-1fcfbaa1c87" target="_blank">Aprendizaje por Refuerzo: Introducción al mundo del RL - Medium</a></li>
-                            <li><a href="http://incompleteideas.net/book/the-book-2nd.html" target="_blank">"Reinforcement Learning: An Introduction" - Sutton & Barto</a></li>
-                            <li><a href="https://deepreinforcementlearningbook.org/" target="_blank">"Deep Reinforcement Learning" – Pieter Abbeel (UC Berkeley)</a></li>
-                            <li><a href="https://github.com/DLR-RM/stable-baselines3" target="_blank">Stable Baselines3 – Implementaciones de algoritmos</a></li>
+                            <li><a href="https://es.wikipedia.org/wiki/Aprendizaje_por_refuerzo" target="_blank" rel="noopener">Aprendizaje por refuerzo - WikiPedia</a></li>
+                            <li><a href="https://www.ibm.com/es-es/think/topics/reinforcement-learning" target="_blank" rel="noopener">"¿Qué es el aprendizaje de refuerzo?" - IBM</a></li>
+                            <li><a href="https://deepreinforcementlearningbook.org/" target="_blank" rel="noopener">"Deep Reinforcement Learning" – Pieter Abbeel (UC Berkeley)</a></li>
+                            <li><a href="https://medium.com/aprendizaje-por-refuerzo-introducci%C3%B3n-al-mundo-del/aprendizaje-por-refuerzo-introducci%C3%B3n-al-mundo-del-rl-1fcfbaa1c87" target="_blank" rel="noopener">Aprendizaje por Refuerzo: Introducción al mundo del RL - Medium</a></li>
+                            <li><a href="http://incompleteideas.net/book/the-book-2nd.html" target="_blank" rel="noopener">"Reinforcement Learning: An Introduction" - Sutton & Barto</a></li>
+                            <li><a href="https://deepreinforcementlearningbook.org/" target="_blank" rel="noopener">"Deep Reinforcement Learning" – Pieter Abbeel (UC Berkeley)</a></li>
+                            <li><a href="https://github.com/DLR-RM/stable-baselines3" target="_blank" rel="noopener">Stable Baselines3 – Implementaciones de algoritmos</a></li>
                         </ul>
                     </div>
                 </div>
@@ -241,7 +241,7 @@ document.addEventListener('DOMContentLoaded', function() {
         </section>
     </main>
     <footer>
-        <p>© 2025 <b>Diego Labrin</b>. Proyecto educativo para Sistemas Inteligentes - UFRO.</p>
+        <p>© 2025 <b><a href="https://diegovpn.buzz" target="_blank" rel="noopener">Diego Labrin</a></b>. Proyecto educativo para Sistemas Inteligentes - UFRO.</p>
     </footer>
 </body>
 </html>
